--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -99,6 +99,7 @@ header {
 			display: flex;
 			justify-content: space-around;
 			.header__utils{
+				display: flex;
 				button{
 					border: none;
 					outline: none;
